# llm-cli

./: .pre-commit-config.yaml  .releaserc.json  Taskfile.yaml  pyproject.toml
.github/workflows/: lint.yaml  publish.yaml  release.yaml  tests.yaml
docs/: contributing.md
llm_term/: __init__.py  utils.py
